--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 server.port=8081
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pru_tec_gestion_logistica_transporte?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://localhost:3306/pru_tec_gestion_logistica_transporte
 spring.datasource.username=root
 spring.datasource.password=112233
 spring.datasource.tomcat.max-wait=200000
@@ -9,6 +8,12 @@ spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=20
 spring.datasource.tomcat.min-idle=15
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.id.new_generator_mappings = false
+spring.jpa.properties.hibernate.format_sql = true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
