--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8081
-
+sistema.context-path.api=/api
+#spring.webflux.base-path=/sistema
+#spring.webflux.static-path-pattern=/static/**
 spring.datasource.url=jdbc:mariadb://localhost:3306/pru_tec_gestion_logistica_transporte
 spring.datasource.username=root
 spring.datasource.password=112233
